--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@emotion/cache": "^11.10.3",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.14.6",
     "@mui/lab": "^5.0.0-alpha.100",
     "@mui/material": "^5.10.6",
+    "@mui/utils": "^5.14.6",
+    "@mui/x-data-grid": "^6.12.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -20,6 +23,7 @@
     "framer-motion": "^7.3.6",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "material-react-table": "^1.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
@@ -28,11 +32,12 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-google-charts": "^4.0.1",
     "react-number-format": "^4.9.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.4",
     "react-router": "^6.4.1",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-window": "^1.8.7",
