--- a/package.json
+++ b/package.json
@@ -49,9 +49,13 @@
     "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
   },
+  
+  
+  
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI='' react-scripts build",
+    "build": "react-scripts build",
+    "netlify-build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
