--- a/package.json
+++ b/package.json
@@ -49,12 +49,9 @@
     "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
   },
-  
-  
-  
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "netlify-build": "CI= react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -86,13 +83,10 @@
     "@babel/core": "^7.23.9",
     "@babel/eslint-parser": "^7.23.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.2.4"
